2018-11-08: 2.0.0 (78e2e85)
- Initial version

2018-11-08: 2.0.1 (54b1772)
- Added readme.md and licenses

2018-11-08: 2.0.2 (2ee80c5)
- Fixed readme link in Cargo.toml

2018-11-08: 2.0.3 (ede6832)
- Fixed github links in readme.md

unknown: 2.0.4 (<unknown>)
- Fixed :func: links